# BarvazDNS

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
resources/: app.manifest
src/: arg_parser.rs  main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/common/: config.rs  consts.rs  message.rs  mod.rs  prompt.rs  strings.rs  version_check.rs
src/dashboard/: dashboard.html  dashboard.js  mod.rs  style.css
src/service/: config.rs  duckdns.rs  mod.rs  named_pipe.rs  named_pipe_extension.rs  pipe_security.rs
src/service_manager/: mod.rs
src/tray/: mod.rs
