[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
windows-service = "0.8.0"
windows-sys = "0.59.0"
log = "0.4"
flexi_logger = "0.27"
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1.0"
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
humantime-serde = "1.1"
toml = { version = "0.8", features = ["display"] }